--- a/popup.css
+++ b/popup.css
@@ -2,6 +2,15 @@
     width: 450px;
     height: 450px;
 }
-input[type=number]{
+
+input[type=number] {
     width:50px;
+}
+
+.disable-select {
+    user-select: none; /* supported by Chrome and Opera */
+   -webkit-user-select: none; /* Safari */
+   -khtml-user-select: none; /* Konqueror HTML */
+   -moz-user-select: none; /* Firefox */
+   -ms-user-select: none; /* Internet Explorer/Edge */
 }
