--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,12 @@
 ﻿body {
     width: 400px;
     height: 450px;
+		-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 input[type=number] {
