--- a/popup.css
+++ b/popup.css
@@ -7,6 +7,7 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+		overflow: hidden;
 }
 
 input[type=number] {
@@ -44,4 +45,26 @@ th, td {
     font-variant: normal;
     font-weight: 400;
     line-height: 20px;
+}
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 50px;
+  height: 50px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+	margin: 0 auto;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
