--- a/popup.css
+++ b/popup.css
@@ -1,5 +1,5 @@
 ﻿body {
-		height: 450px;
+		height: 100%;
 		-webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -26,7 +26,7 @@ th, td {
 
 .math {
 		display: block;
-		margin: 0 auto;
+		margin: 0px auto;
 }
 
 .disable-select {
